--- a/index.ipynb
+++ b/index.ipynb
@@ -349,25 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island']"
+       "'Toronto'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +379,7 @@
        "str"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
